some code cleanup

--- a/main.ipynb
+++ b/main.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-01T15:32:32.441539Z",
-     "start_time": "2024-12-01T15:32:32.408025Z"
+     "end_time": "2024-12-01T16:10:55.576987Z",
+     "start_time": "2024-12-01T16:10:55.496990Z"
     }
    },
    "cell_type": "code",
@@ -18,7 +18,7 @@
     "marker_id = detector.get_marker_id(portrait_number)  \n",
     "print(marker_id)\n",
     "\n",
-    "# Step 2: Generate the info box\n",
+    "# Step 2: Generate the information artifact\n",
     "info_box_generator = InfoBoxGenerator()\n",
     "info_box_generator.generate_info_image(marker_id)\n"
    ],
@@ -32,7 +32,7 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 22
   },
   {
    "metadata": {},
