update README.md and add code descriptions

--- a/main.ipynb
+++ b/main.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-01T16:10:55.576987Z",
-     "start_time": "2024-12-01T16:10:55.496990Z"
+     "end_time": "2024-12-12T11:19:23.692165Z",
+     "start_time": "2024-12-12T11:19:23.652541Z"
     }
    },
    "cell_type": "code",
@@ -14,9 +14,9 @@
     "\n",
     "# Step 1: Get the marker ID\n",
     "detector = ExperimentDetector()\n",
-    "portrait_number = 4 # Give desired input number (1,..4)\n",
+    "portrait_number = 3 # Give desired input number (1..4)\n",
     "marker_id = detector.get_marker_id(portrait_number)  \n",
-    "print(marker_id)\n",
+    "print(f'marker id: {marker_id}')\n",
     "\n",
     "# Step 2: Generate the information artifact\n",
     "info_box_generator = InfoBoxGenerator()\n",
@@ -28,19 +28,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ID4\n"
+      "marker id: ID3\n"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 7
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T11:14:57.960202Z",
+     "start_time": "2024-12-12T11:14:57.955506Z"
+    }
+   },
    "cell_type": "code",
+   "source": "\n",
+   "id": "4d1c6835a863a8a7",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "ec506f787dd3e7d4"
+   "execution_count": 5
   }
  ],
  "metadata": {
